<resources>
    <string name="app_name">WatherAppNeco</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="real_feel">Real Feel</string>
    <string name="humidity">Humidity</string>
    <string name="sunny">Sunny</string>
    <string name="_12">12°</string>
    <string name="fri_16_sep_2022_19_23_24_gmt">Fri, 16 Sep 2022 19:23:24 GMT</string>
    <string name="united_states">United States</string>
    <string name="new_york">New York</string>
    <string name="current_temp_week">%d°</string>
</resources>