<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.8"
    android:background="@drawable/gradient_background"
    android:theme="@style/ThemeOverlay.WatherAppNeco.FullscreenContainer"
    tools:context=".fragments.FragmentOne">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/update_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_baseline_location_searching_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/search_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_search_24"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/update_location"
        app:layout_constraintEnd_toStartOf="@id/update_location"
        app:layout_constraintTop_toTopOf="@id/update_location"
        app:layout_constraintBottom_toBottomOf="@id/update_location" />


    <TextView
        android:id="@+id/name_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/new_york"
        android:textColor="@color/text_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/country_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/united_states"
        android:textColor="@color/text_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_city" />

    <TextView
        android:id="@+id/data_current_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:text="@string/fri_16_sep_2022_19_23_24_gmt"
        android:textColor="#94FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country_city" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon_current"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/img"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="@id/temp_current"
        app:layout_constraintEnd_toStartOf="@id/temp_current"
        app:layout_constraintTop_toTopOf="@id/temp_current" />

    <TextView
        android:id="@+id/temp_current"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/data_current_day" />

    <TextView
        android:id="@+id/type_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunny"
        android:textColor="@color/text_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temp_current" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/humidity"
        android:textColor="@color/text_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/real_feel"
        app:layout_constraintStart_toStartOf="@id/real_feel" />

    <TextView
        android:id="@+id/real_feel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/real_feel"
        android:textColor="@color/text_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/wind_speed"
        android:textColor="@color/text_white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/real_feel"
        app:layout_constraintTop_toBottomOf="@id/real_feel" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/humidity"
        app:layout_constraintBottom_toBottomOf="@id/humidity"
        app:layout_constraintEnd_toStartOf="@id/humidity"
        app:layout_constraintTop_toTopOf="@id/humidity" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/temperature"
        app:layout_constraintBottom_toBottomOf="@id/real_feel"
        app:layout_constraintEnd_toStartOf="@id/real_feel"
        app:layout_constraintTop_toTopOf="@id/real_feel" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/wind"
        app:layout_constraintBottom_toBottomOf="@id/wind_speed"
        app:layout_constraintEnd_toStartOf="@id/wind_speed"
        app:layout_constraintTop_toTopOf="@id/wind_speed" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/real_feel"
        android:background="#4B96E0FE"
        app:tabInlineLabel="true"
        app:tabMode="fixed" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>
